--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </div>
                 <div class="video-info" lang="en-ar">
                     <a href="https://youtu.be/L2Gm-L2RbDY?si=7rRn3GoTCNWjaHpu"><p class="video-title">&#35;ABtalks with Bassem Youssef &#45; مع باسم يوسف &#124; Chapter 82</p></a>
-                    <a href="https://www.youtube.com/@AnasBukhash"><p class="author">Anas Bukhash أنس بوخش <img class="verified-sign" src="check.png" alt="verified"></p></a>
+                    <a href="https://www.youtube.com/@AnasBukhash"><p class="author">Anas Bukhash أنس بوخش <img class="verified-sign" src="clone profiles/check.png" alt="verified"></p></a>
                     <p class="stats" >2.3M views &#183; 2 years ago</p>
                 </div>
             </div>
@@ -36,7 +36,7 @@
                 </div>
                 <div class="video-info">
                     <a href="https://youtu.be/4GnVDPD01as?si=I4U_Dt3uSjKb7u39"><p class="video-title">4 Hours of Ambient Study Music To Concentrate &#45; Improve your Focus and Concentration</p></a>
-                    <a href="https://www.youtube.com/@QuietQuest"><p class="author">Quiet Quest &#45; Study Music <img class="verified-sign" src="check.png" alt="verified"></p></a>
+                    <a href="https://www.youtube.com/@QuietQuest"><p class="author">Quiet Quest &#45; Study Music <img class="verified-sign" src="clone profiles/check.png" alt="verified"></p></a>
                     <p class="stats">15M views &#183; 4 years ago</p>
                 </div>
             </div>
@@ -51,7 +51,7 @@
                 </div>
                 <div class="video-info">
                     <a href="https://www.youtube.com/watch?v=wfIY-Ggg6KA"><p class="video-title">Tom Hardy On His Rebellious Ubringing&#33; &#124; Full Interview &#124; Alan Carr&#58; Chatty Man</p></a>
-                    <a href="https://www.youtube.com/@OfficialChattyMan"><p class="author">Alan Carr&#58; Chatty Man <img class="verified-sign" src="check.png" alt="verified"></p></a>
+                    <a href="https://www.youtube.com/@OfficialChattyMan"><p class="author">Alan Carr&#58; Chatty Man <img class="verified-sign" src="clone profiles/check.png" alt="verified"></p></a>
                     <p class="stats">752K views &#183; 4 years ago</p>
                 </div>
             </div>
@@ -81,7 +81,7 @@
                 </div>
                 <div class="video-info">
                     <a href="https://youtu.be/8XEH3A1rYHI?si=a2s1djIS3sHqBdu7"><p class="video-title">How To Find Your True Singing Voice&#33; WHY COPY SOMEONE ELSE&#63;</p></a>
-                    <a href="https://www.youtube.com/@Victoria-Victorious"><p class="author">Healthy Vocal Technique <img class="verified-sign" src="check.png" alt="verified"></p></a>
+                    <a href="https://www.youtube.com/@Victoria-Victorious"><p class="author">Healthy Vocal Technique <img class="verified-sign" src="clone profiles/check.png" alt="verified"></p></a>
                     <p class="stats">5M views &#183; 2 years ago</p>
                 </div>
             </div>
@@ -96,7 +96,7 @@
                 </div>
                 <div class="video-info">
                     <a href="https://youtu.be/544DTGHIBM0?si=1FLOKYRmiqcnkY6t"><p class="video-title">73&#42; Questions With Adele &#124; Vogue</p></a>
-                    <a href="https://www.youtube.com/@Vogue"><p class="author">Vogue <img class="verified-sign" src="check.png" alt="verified"></p></a>
+                    <a href="https://www.youtube.com/@Vogue"><p class="author">Vogue <img class="verified-sign" src="clone profiles/check.png" alt="verified"></p></a>
                     <p class="stats">20M views &#183; 2 years ago</p>
                 </div>
             </div>
@@ -164,7 +164,7 @@
                 </div>
                 <div class="video-info">
                     <a href="https://youtu.be/iNyUmbmQQZg?si=ffYmX3hvoaosB8bO"><p class="video-title">Is it normal to talk to yourself&#63;</p></a>
-                    <a href="https://www.youtube.com/@TEDEd"><p class="author">TED&#45;Ed <img class="verified-sign" src="check.png" alt="verified"></p></a>
+                    <a href="https://www.youtube.com/@TEDEd"><p class="author">TED&#45;Ed <img class="verified-sign" src="clone profiles/check.png" alt="verified"></p></a>
                     <p class="stats">5.4M views &#183; 1 year ago</p>
                 </div>
             </div>
@@ -179,7 +179,7 @@
                 </div>
                 <div class="video-info">
                     <a href="https://youtu.be/7JmprpRIsEY?si=u0EWdNhWb-CUOymb"><p class="video-title">Classical Music for Brain Power &#45; Mozart</p></a>
-                    <a href="https://www.youtube.com/@HALIDONMUSIC"><p class="author">HALIDONMUSIC <img class="verified-sign" src="check.png" alt="verified"></p></a>
+                    <a href="https://www.youtube.com/@HALIDONMUSIC"><p class="author">HALIDONMUSIC <img class="verified-sign" src="clone profiles/check.png" alt="verified"></p></a>
                     <p class="stats">51M views &#183; 6 years ago</p>
                 </div>
             </div>
@@ -224,7 +224,7 @@
                 </div>
                 <div class="video-info">
                     <a href="https://youtu.be/5oH9Nr3bKfw?si=c8nLoOclS4u8K9Mf"><p class="video-title">Tom &#38; Jerry &#124; A Bit of Fresh Air&#33; &#124; Classic Cartoon Compilation &#124; &#64;WB Kids</p></a>
-                    <a href="https://www.youtube.com/@wbkids"><p class="author">WB Kids <img class="verified-sign" src="check.png" alt="verified"></p></a>
+                    <a href="https://www.youtube.com/@wbkids"><p class="author">WB Kids <img class="verified-sign" src="clone profiles/check.png" alt="verified"></p></a>
                     <p class="stats">385M views &#183; 2 years ago</p>
                 </div>
             </div>
@@ -239,7 +239,7 @@
                 </div>
                 <div class="video-info">
                     <a href="https://www.youtube.com/watch?v=zKTU-AZ2Auc"><p class="video-title">4 DIY Old Jeans Ideas &#124; DIY Denim Bags and Wallet &#124; Compilation &#124; Bag Tutorial &#124; Upcycle Crafts</p></a>
-                    <a href="https://www.youtube.com/@IreHeartCrafting"><p class="author">Ire Heart Crafting <img class="verified-sign" src="check.png" alt="verified"></p></a>
+                    <a href="https://www.youtube.com/@IreHeartCrafting"><p class="author">Ire Heart Crafting <img class="verified-sign" src="clone profiles/check.png" alt="verified"></p></a>
                     <p class="stats">1.2M views &#183; 6 months ago</p>
                 </div>
             </div>
