--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="videos">
+    <div class="video-grid">
         <div class="video-one">
             <div class="video-thumbnail">
                 <a href="https://youtu.be/L2Gm-L2RbDY?si=7rRn3GoTCNWjaHpu"><img class="thumbnail" src="clone thumbnails/thumbnail1.webp" alt="Bassem Youssef and Anas Bukhash"></a>
             </div>
-            <div>
+            <div class="video-details">
                 <div class="channel-pic">
                     <a href="https://www.youtube.com/@AnasBukhash"><img class="profile-picture" src="clone profiles/profile1.jpg" alt="profile picture"></a>
                 </div>
@@ -30,7 +30,7 @@
             <div class="video-thumbnail">
                 <a href="https://youtu.be/4GnVDPD01as?si=I4U_Dt3uSjKb7u39"><img class="thumbnail" src="clone thumbnails/thumbnail2.webp" alt="high way in woods"></a>
             </div>
-            <div>
+            <div class="video-details">
                 <div class="channel-pic">
                     <a href="https://www.youtube.com/@QuietQuest"><img class="profile-picture" src="clone profiles/profile2.jpg" alt="profile picture"></a>
                 </div>
@@ -45,7 +45,7 @@
             <div class="video-thumbnail">
                 <a href="https://www.youtube.com/watch?v=wfIY-Ggg6KA"><img class="thumbnail" src="clone thumbnails/thumbnail3.webp" alt="Tom Hardy"></a>
             </div>
-            <div>
+            <div class="video-details">
                 <div class="channel-pic">
                     <a href="https://www.youtube.com/@OfficialChattyMan"><img class="profile-picture" src="clone profiles/profile3.jpg" alt="profile picture"></a>
                 </div>
@@ -60,7 +60,7 @@
             <div class="video-thumbnail">
                 <a href="https://www.youtube.com/watch?v=NzTEZgFEr9k"><img class="thumbnail" src="clone thumbnails/thumbnail4.webp" alt="English tutor"></a>
             </div>
-            <div>
+            <div class="video-details">
                 <div class="channel-pic">
                     <a href="https://www.youtube.com/@BrianWilesLanguages"><img class="profile-picture" src="clone profiles/profile4.jpg" alt="profile picture"></a>
                 </div>
@@ -75,7 +75,7 @@
             <div class="video-thumbnail">
                 <a href="https://youtu.be/8XEH3A1rYHI?si=a2s1djIS3sHqBdu7"><img class="thumbnail" src="clone thumbnails/thumbnail5.webp" alt="woman"></a>
             </div>
-            <div>
+            <div class="video-details">
                 <div class="channel-pic">
                     <a href="https://www.youtube.com/@Victoria-Victorious"><img class="profile-picture" src="clone profiles/profile5.jpg" alt="profile picture"></a>
                 </div>
@@ -90,7 +90,7 @@
             <div class="video-thumbnail">
                 <a href="https://youtu.be/544DTGHIBM0?si=1FLOKYRmiqcnkY6t"><img class="thumbnail" src="clone thumbnails/thumbnail6.webp" alt="Adele"></a>
             </div>
-            <div>
+            <div class="video-details">
                 <div class="channel-pic">
                     <a href="https://www.youtube.com/@Vogue"><img class="profile-picture" src="clone profiles/profile6.jpg" alt="profile picture"></a>
                 </div>
@@ -104,7 +104,7 @@
     </div>
 
 
-    <div class="shorts">
+    <div class="shorts-grid">
         <div class="short-one">
             <div>
                 <a href="https://www.youtube.com/watch?v=SZcgYIVqDGA"><img class="short-thumbnail" src="clone thumbnails/short1.webp" alt="spongebob cake"></a>
@@ -153,12 +153,12 @@
     </div>
     
 
-    <div class="videos">
+    <div class="video-grid">
         <div class="video-seven">
             <div class="video-thumbnail">
                 <a href="https://youtu.be/iNyUmbmQQZg?si=ffYmX3hvoaosB8bO"><img class="thumbnail" src="clone thumbnails/thumbnail7.webp" alt="Sketch of man"></a>
             </div>
-            <div>
+            <div class="video-details">
                 <div class="channel-pic">
                     <a href="https://www.youtube.com/@TEDEd"><img class="profile-picture" src="clone profiles/profile7.jpg" alt="profile picture"></a>
                 </div>
@@ -173,7 +173,7 @@
             <div class="video-thumbnail">
                 <a href="https://youtu.be/7JmprpRIsEY?si=u0EWdNhWb-CUOymb"><img class="thumbnail" src="clone thumbnails/thumbnail8.webp" alt="Mozart"></a>
             </div>
-            <div>
+            <div class="video-details">
                 <div class="channel-pic">
                     <a href="https://www.youtube.com/@HALIDONMUSIC"><img class="profile-picture" src="clone profiles/profile8.jpg" alt="profile picture"></a>
                 </div>
@@ -188,7 +188,7 @@
             <div class="video-thumbnail">
                 <a href="https://youtu.be/AR4B-IVlDyo?si=nGYHZFQjqNU7QZRV"><img class="thumbnail" src="clone thumbnails/thumbnail9.webp" alt="nuts cookies"></a>
             </div>
-            <div>
+            <div class="video-details">
                 <div class="channel-pic">
                     <a href="https://www.youtube.com/@fantastischerezepte8751"><img class="profile-picture" src="clone profiles/profile9.jpg" alt="profile picture"></a>
                 </div>
@@ -203,7 +203,7 @@
             <div class="video-thumbnail">
                 <a href="https://youtu.be/ydAyvvDQrgY?si=rHomLjIO3NhpQtnr"><img class="thumbnail" src="clone thumbnails/thumbnail10.webp" alt="passengers in subway"></a>
             </div>
-            <div>
+            <div class="video-details">
                 <div class="channel-pic">
                     <a href="https://www.youtube.com/@TheLiberatorsInternational"><img class="profile-picture" src="clone profiles/profile10.jpg" alt="profile picture"></a>
                 </div>
@@ -218,7 +218,7 @@
             <div class="video-thumbnail">
                 <a href="https://youtu.be/5oH9Nr3bKfw?si=c8nLoOclS4u8K9Mf"><img class="thumbnail" src="clone thumbnails/thumbnail11.webp" alt="Tom and Jerry"></a>
             </div>
-            <div>
+            <div class="video-details">
                 <div class="channel-pic">
                     <a href="https://www.youtube.com/@wbkids"><img class="profile-picture" src="clone profiles/profile11.jpg" alt="profile picture"></a>
                 </div>
@@ -233,7 +233,7 @@
             <div class="video-thumbnail">
                 <a href="https://www.youtube.com/watch?v=zKTU-AZ2Auc"><img class="thumbnail" src="clone thumbnails/thumbnail12.webp" alt="jeans tailored bags"></a>
             </div>
-            <div>
+            <div class="video-details">
                 <div class="channel-pic">
                     <a href="https://www.youtube.com/@IreHeartCrafting"><img class="profile-picture" src="clone profiles/profile12.jpg" alt="profile picture"></a>
                 </div>
