--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
             <div class="video-one">
                 <div class="video-thumbnail">
                     <a href="https://youtu.be/L2Gm-L2RbDY?si=7rRn3GoTCNWjaHpu"><img class="thumbnail" src="clone thumbnails/thumbnail1.webp" alt="Bassem Youssef and Anas Bukhash"></a>
+                    <div class="vid-time">58&#58;49</div>
                 </div>
                 <div class="video-details">
                     <div class="channel-pic">
@@ -97,6 +98,7 @@
             <div class="video-two">
                 <div class="video-thumbnail">
                     <a href="https://youtu.be/4GnVDPD01as?si=I4U_Dt3uSjKb7u39"><img class="thumbnail" src="clone thumbnails/thumbnail2.webp" alt="high way in woods"></a>
+                    <div class="vid-time">3&#58;44&#58;55</div>
                 </div>
                 <div class="video-details">
                     <div class="channel-pic">
@@ -112,10 +114,11 @@
             <div class="video-three">
                 <div class="video-thumbnail">
                     <a href="https://www.youtube.com/watch?v=wfIY-Ggg6KA"><img class="thumbnail" src="clone thumbnails/thumbnail3.webp" alt="Tom Hardy"></a>
+                    <div class="vid-time">13&#58;20</div>
                 </div>
                 <div class="video-details">
                     <div class="channel-pic">
-                        <a href="https://www.youtube.com/@OfficialChattyMan"><img class="profile-picture" src="clone profiles/profile3.jpg" alt="profile picture"></a>
+                        <a href="https://www.youtube.com/@OfficialChattyMan"><img class="profile-picture" src="clone profiles/profile3.jpg" alt="profile picture">
                     </div>
                     <div class="video-info">
                         <a href="https://www.youtube.com/watch?v=wfIY-Ggg6KA"><p class="video-title">Tom Hardy On His Rebellious Ubringing&#33; &#124; Full Interview &#124; Alan Carr&#58; Chatty Man</p></a>
@@ -127,6 +130,7 @@
             <div class="video-four">
                 <div class="video-thumbnail">
                     <a href="https://www.youtube.com/watch?v=NzTEZgFEr9k"><img class="thumbnail" src="clone thumbnails/thumbnail4.webp" alt="English tutor"></a>
+                    <div class="vid-time">21&#58;30</div>
                 </div>
                 <div class="video-details">
                     <div class="channel-pic">
@@ -142,6 +146,7 @@
             <div class="video-five">
                 <div class="video-thumbnail">
                     <a href="https://youtu.be/8XEH3A1rYHI?si=a2s1djIS3sHqBdu7"><img class="thumbnail" src="clone thumbnails/thumbnail5.webp" alt="woman"></a>
+                    <div class="vid-time">12&#58;26</div>
                 </div>
                 <div class="video-details">
                     <div class="channel-pic">
@@ -157,6 +162,7 @@
             <div class="video-six">
                 <div class="video-thumbnail">
                     <a href="https://youtu.be/544DTGHIBM0?si=1FLOKYRmiqcnkY6t"><img class="thumbnail" src="clone thumbnails/thumbnail6.webp" alt="Adele"></a>
+                    <div class="vid-time">18&#58;28</div>
                 </div>
                 <div class="video-details">
                     <div class="channel-pic">
@@ -172,6 +178,7 @@
             <div class="video-seven">
                 <div class="video-thumbnail">
                     <a href="https://youtu.be/iNyUmbmQQZg?si=ffYmX3hvoaosB8bO"><img class="thumbnail" src="clone thumbnails/thumbnail7.webp" alt="Sketch of man"></a>
+                    <div class="vid-time">5&#58;19</div>
                 </div>
                 <div class="video-details">
                     <div class="channel-pic">
@@ -187,6 +194,7 @@
             <div class="video-eight">
                 <div class="video-thumbnail">
                     <a href="https://youtu.be/7JmprpRIsEY?si=u0EWdNhWb-CUOymb"><img class="thumbnail" src="clone thumbnails/thumbnail8.webp" alt="Mozart"></a>
+                    <div class="vid-time">2&#58;23&#58;54</div>
                 </div>
                 <div class="video-details">
                     <div class="channel-pic">
@@ -266,6 +274,7 @@
             <div class="video-nine">
                 <div class="video-thumbnail">
                     <a href="https://youtu.be/AR4B-IVlDyo?si=nGYHZFQjqNU7QZRV"><img class="thumbnail" src="clone thumbnails/thumbnail9.webp" alt="nuts cookies"></a>
+                    <div class="vid-time">8&#58;03</div>
                 </div>
                 <div class="video-details">
                     <div class="channel-pic">
@@ -281,6 +290,7 @@
             <div class="video-ten">
                 <div class="video-thumbnail">
                     <a href="https://youtu.be/ydAyvvDQrgY?si=rHomLjIO3NhpQtnr"><img class="thumbnail" src="clone thumbnails/thumbnail10.webp" alt="passengers in subway"></a>
+                    <div class="vid-time">1&#58;48</div>
                 </div>
                 <div class="video-details">
                     <div class="channel-pic">
@@ -296,6 +306,7 @@
             <div class="video-eleven">
                 <div class="video-thumbnail">
                     <a href="https://youtu.be/5oH9Nr3bKfw?si=c8nLoOclS4u8K9Mf"><img class="thumbnail" src="clone thumbnails/thumbnail11.webp" alt="Tom and Jerry"></a>
+                    <div class="vid-time">22&#58;55</div>
                 </div>
                 <div class="video-details">
                     <div class="channel-pic">
@@ -311,6 +322,7 @@
             <div class="video-twelve">
                 <div class="video-thumbnail">
                     <a href="https://www.youtube.com/watch?v=zKTU-AZ2Auc"><img class="thumbnail" src="clone thumbnails/thumbnail12.webp" alt="jeans tailored bags"></a>
+                    <div class="vid-time">42&#58;47</div>
                 </div>
                 <div class="video-details">
                     <div class="channel-pic">
