--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 </div>
                 <div class="video-info">
                     <a href="https://youtu.be/L2Gm-L2RbDY?si=7rRn3GoTCNWjaHpu"><p class="video-title" title="&#35;ABtalks with Bassem Youssef &#45; مع باسم يوسف &#124; Chapter 82">&#35;ABtalks with Bassem Youssef &#45; مع باسم يوسف &#124; Chapter 82</p></a>
-                    <div class="author-div-one">
+                    <div class="author-div">
                         <a href="https://www.youtube.com/@AnasBukhash"><p class="author">Anas Bukhash أنس بوخش <img class="verified-sign" src="clone profiles/check.png" alt="verified"></p></a>
                         <div class="tooltip">Anas Bukhash أنس بوخش</div> 
                      </div>   
@@ -118,7 +118,7 @@
                 </div>
                 <div class="video-info">
                     <a href="https://youtu.be/4GnVDPD01as?si=I4U_Dt3uSjKb7u39"><p class="video-title" title="4 Hours of Ambient Study Music To Concentrate &#45; Improve your Focus and Concentration">4 Hours of Ambient Study Music To Concentrate &#45; Improve your Focus and Concentration</p></a>
-                    <div class="author-div-two">
+                    <div class="author-div">
                         <a href="https://www.youtube.com/@QuietQuest"><p class="author">Quiet Quest &#45; Study Music <img class="verified-sign" src="clone profiles/check.png" alt="verified"></p></a>
                         <div class="tooltip">Quiet Quest &#45; Study Music</div>
                     </div>
@@ -137,7 +137,7 @@
                 </div>
                 <div class="video-info">
                     <a href="https://www.youtube.com/watch?v=wfIY-Ggg6KA"><p class="video-title" title="Tom Hardy On His Rebellious Ubringing&#33; &#124; Full Interview &#124; Alan Carr&#58; Chatty Man">Tom Hardy On His Rebellious Ubringing&#33; &#124; Full Interview &#124; Alan Carr&#58; Chatty Man</p></a>
-                    <div class="author-div-three">
+                    <div class="author-div">
                         <a href="https://www.youtube.com/@OfficialChattyMan"><p class="author">Alan Carr&#58; Chatty Man <img class="verified-sign" src="clone profiles/check.png" alt="verified"></p></a>
                         <div class="tooltip">Alan Carr&#58; Chatty Man</div>
                     </div>
@@ -156,7 +156,7 @@
                 </div>
                 <div class="video-info">
                     <a href="https://www.youtube.com/watch?v=NzTEZgFEr9k"><p class="video-title" title="What&#39;s Your English Level&#63; Take This Test&#33;">What&#39;s Your English Level&#63; Take This Test&#33;</p></a>
-                    <div class="author-div-four">
+                    <div class="author-div">
                         <a href="https://www.youtube.com/@BrianWilesLanguages"><p class="author">Brian Wiles</p></a>
                         <div class="tooltip">Brian Wiles</div>
                     </div>
@@ -175,7 +175,7 @@
                 </div>
                 <div class="video-info">
                     <a href="https://youtu.be/8XEH3A1rYHI?si=a2s1djIS3sHqBdu7"><p class="video-title" title="How To Find Your True Singing Voice&#33; WHY COPY SOMEONE ELSE&#63;">How To Find Your True Singing Voice&#33; WHY COPY SOMEONE ELSE&#63;</p></a>
-                    <div class="author-div-five">
+                    <div class="author-div">
                         <a href="https://www.youtube.com/@Victoria-Victorious"><p class="author">Healthy Vocal Technique <img class="verified-sign" src="clone profiles/check.png" alt="verified"></p></a>
                         <div class="tooltip">Healthy Vocal Technique</div>
                     </div>
@@ -194,7 +194,7 @@
                 </div>
                 <div class="video-info">
                     <a href="https://youtu.be/544DTGHIBM0?si=1FLOKYRmiqcnkY6t"><p class="video-title" title="73&#42; Questions With Adele &#124; Vogue">73&#42; Questions With Adele &#124; Vogue</p></a>
-                    <div class="author-div-six">
+                    <div class="author-div">
                         <a href="https://www.youtube.com/@Vogue"><p class="author">Vogue <img class="verified-sign" src="clone profiles/check.png" alt="verified"></p></a>
                         <div class="tooltip">Vogue</div>
                     </div>
@@ -274,7 +274,7 @@
                 </div>
                 <div class="video-info">
                     <a href="https://youtu.be/iNyUmbmQQZg?si=ffYmX3hvoaosB8bO"><p class="video-title" title="Is it normal to talk to yourself&#63;">Is it normal to talk to yourself&#63;</p></a>
-                    <div class="author-div-seven">
+                    <div class="author-div">
                         <a href="https://www.youtube.com/@TEDEd"><p class="author">TED&#45;Ed <img class="verified-sign" src="clone profiles/check.png" alt="verified"></p></a>
                         <div class="tooltip">TED&#45;Ed</div>
                     </div>
@@ -293,7 +293,7 @@
                 </div>
                 <div class="video-info">
                     <a href="https://youtu.be/7JmprpRIsEY?si=u0EWdNhWb-CUOymb"><p class="video-title" title="Classical Music for Brain Power &#45; Mozart">Classical Music for Brain Power &#45; Mozart</p></a>
-                    <div class="author-div-eight">
+                    <div class="author-div">
                         <a href="https://www.youtube.com/@HALIDONMUSIC"><p class="author">HALIDONMUSIC <img class="verified-sign" src="clone profiles/check.png" alt="verified"></p></a>
                         <div class="tooltip">HALIDONMUSIC</div>
                     </div>
@@ -312,7 +312,7 @@
                 </div>
                 <div class="video-info">
                     <a href="https://youtu.be/AR4B-IVlDyo?si=nGYHZFQjqNU7QZRV"><p class="video-title" title="I don&#39;t eat sugar&#33; Healthy cookies without flour and sugar&#33; Energy dessert recipe&#33;">I don&#39;t eat sugar&#33; Healthy cookies without flour and sugar&#33; Energy dessert recipe&#33;</p></a>
-                    <div class="author-div-nine">
+                    <div class="author-div">
                         <a href="https://www.youtube.com/@fantastischerezepte8751"><p class="author">Fantastische Rezepte</p></a>
                         <div class="tooltip">Fantastische Rezepte</div>
                     </div>
@@ -331,7 +331,7 @@
                 </div>
                 <div class="video-info">
                     <a href="https://youtu.be/ydAyvvDQrgY?si=rHomLjIO3NhpQtnr"><p class="video-title" title="Spreading the joy of laughter on a train">Spreading the joy of laughter on a train</p></a>
-                    <div class="author-div-ten">
+                    <div class="author-div">
                         <a href="https://www.youtube.com/@TheLiberatorsInternational"><p class="author">The Liberators</p></a>
                         <div class="tooltip">The Liberators</div>
                     </div>
@@ -350,7 +350,7 @@
                 </div>
                 <div class="video-info">
                     <a href="https://youtu.be/5oH9Nr3bKfw?si=c8nLoOclS4u8K9Mf"><p class="video-title" title="Tom &#38; Jerry &#124; A Bit of Fresh Air&#33; &#124; Classic Cartoon Compilation &#124; &#64;WB Kids">Tom &#38; Jerry &#124; A Bit of Fresh Air&#33; &#124; Classic Cartoon Compilation &#124; &#64;WB Kids</p></a>
-                    <div class="author-div-eleven">
+                    <div class="author-div">
                         <a href="https://www.youtube.com/@wbkids"><p class="author">WB Kids <img class="verified-sign" src="clone profiles/check.png" alt="verified"></p></a>
                         <div class="tooltip">WB Kids</div>
                     </div>
@@ -369,7 +369,7 @@
                 </div>
                 <div class="video-info">
                     <a href="https://www.youtube.com/watch?v=zKTU-AZ2Auc"><p class="video-title" title="4 DIY Old Jeans Ideas &#124; DIY Denim Bags and Wallet &#124; Compilation &#124; Bag Tutorial &#124; Upcycle Crafts">4 DIY Old Jeans Ideas &#124; DIY Denim Bags and Wallet &#124; Compilation &#124; Bag Tutorial &#124; Upcycle Crafts</p></a>
-                    <div class="author-div-twelve">
+                    <div class="author-div">
                         <a href="https://www.youtube.com/@IreHeartCrafting"><p class="author">Ire Heart Crafting <img class="verified-sign" src="clone profiles/check.png" alt="verified"></p></a>
                         <div class="tooltip">Ire Heart Crafting</div>
                     </div>
