--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <a href="https://youtu.be/L2Gm-L2RbDY?si=7rRn3GoTCNWjaHpu"><img class="thumbnail" src="clone thumbnails/thumbnail1.webp" alt="Bassem Youssef and Anas Bukhash"></a>
                     <div class="vid-time">58&#58;49</div>
                 </div>
-                <div class="video-details" lang="en-ar">
+                <div class="video-details" lang="ar">
                     <div class="channel-pic">
                         <a href="https://www.youtube.com/@AnasBukhash"><img class="profile-picture" src="clone profiles/profile1.jpg" title="Anas Bukhash أنس بوخش"></a>
                     </div>
@@ -217,7 +217,7 @@
                     <div>
                         <a href="https://www.youtube.com/watch?v=SZcgYIVqDGA"><img class="short-thumbnail" src="clone thumbnails/short1.webp"></a>
                     </div>
-                    <div class="short-info" lang="en, ko">
+                    <div class="short-info" lang="ko">
                     <a href="https://www.youtube.com/watch?v=SZcgYIVqDGA"><p class="short-title" title="스폰지밥과 뚱이의 절친인증 케이크 Spongebob Cake">스폰지밥과 뚱이의 절친인증 케이크 Spongebob Cake</p></a>
                     <p class="short-stats">11M views</p>
                     </div>
