--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <button>Live</button>
         <button>Dialogues</button>
         <button>Patterns</button>
-        <button>Computers te&#8230;</button>
+        <button>Computers technology</button>
         <img class="more-tags" src="icons/more.png">
     </header>
 
